fix icon on mobile

--- a/src/app/features/swaps/features/swap-form/components/set-to-market-button/set-to-market-button.component.scss
+++ b/src/app/features/swaps/features/swap-form/components/set-to-market-button/set-to-market-button.component.scss
@@ -15,8 +15,13 @@
     height: 16px;
 
     ::ng-deep {
-      svg path {
-        fill: var(--secondary-text);
+      svg {
+        width: 100%;
+        height: 100%;
+
+        path {
+          fill: var(--secondary-text);
+        }
       }
     }
   }
